# remove-boiler-plate

./: Cargo.toml  README.md
src/: dotnet_utils.rs  file_utils.rs  io_utils.rs  loaders_utils.rs  main.rs  path_utils.rs  text_utils.rs  zip_utils.rs
