[package]
name = "remove-boiler-plate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.2"
dialoguer = "0.10.2"
indicatif = "0.17.2"
lazy_static = "1.4.0"
walkdir = "2.3.2"
xmlparser = "0.13.5"
zip = "0.6.3"

